message("-- Linking ${CMAKE_BUILD_TYPE}")
message(INFO ${CMAKE_CURRENT_SOURCE_DIR}/MultiSense.lib)


IF(CMAKE_BUILD_TYPE MATCHES Debug)
message("Linking Debug version of LibMultiSense")
add_library(MultiSenseWindows STATIC IMPORTED GLOBAL)
set_property(TARGET MultiSenseWindows APPEND PROPERTY IMPORTED_CONFIGURATIONS Debug)
set_target_properties(MultiSenseWindows PROPERTIES
IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
IMPORTED_LOCATION_DEBUG  ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE}/MultiSense.lib)
ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)

IF(CMAKE_BUILD_TYPE MATCHES Release)
message("Linking Release version of LibMultiSense")
add_library(MultiSenseWindows STATIC IMPORTED GLOBAL)
set_property(TARGET MultiSenseWindows APPEND PROPERTY IMPORTED_CONFIGURATIONS Release)
set_target_properties(MultiSenseWindows PROPERTIES
IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
IMPORTED_LOCATION_RELEASE  ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE}/MultiSense.lib)
ENDIF(CMAKE_BUILD_TYPE MATCHES Release) 