message("-- Linking pcap_build libs")

add_library(winpcap_lib STATIC IMPORTED GLOBAL)
set_property(TARGET winpcap_lib APPEND PROPERTY IMPORTED_CONFIGURATIONS DEBUG)
set_target_properties(winpcap_lib PROPERTIES
IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
IMPORTED_LOCATION_DEBUG  ${CMAKE_CURRENT_SOURCE_DIR}/wpcap.lib)

add_library(packet_lib STATIC IMPORTED GLOBAL)
set_property(TARGET packet_lib APPEND PROPERTY IMPORTED_CONFIGURATIONS DEBUG)
set_target_properties(packet_lib PROPERTIES
IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
IMPORTED_LOCATION_DEBUG  ${CMAKE_CURRENT_SOURCE_DIR}/Packet.lib)

message(INFO ${CMAKE_CURRENT_SOURCE_DIR}/Packet.lib)
